Updates to group APIs
